--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bluebird": "^3.7.2",
+    "commander": "^9.1.0",
     "puppeteer": "^10.4.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
